# traceroute_simulator

./: .gitignore  AGENTS.md  CLAUDE.md  Configuration.mk  Configuration.mk.example  LICENSE  MANIFEST.in  MTR_INTEGRATION.md  Makefile  README.md  control_flow_example.tsim  convert_legacy_facts.py  dict_methods_example.tsim  get_routing_info.yml  ip_json_wrapper.py  iptables_forward_analyzer.py  mtr_executor.py  pyproject.toml  requirements.txt  reverse_path_tracer.py  route_formatter.py  run_namespace_tests.sh  setup.py  test_mtr_integration.py  traceroute_simulator.py  traceroute_simulator.yaml  tsim-completion.bash  tsimsh  variables_example.tsim
ansible/: __init__.py  extract_interfaces.py  get_facts.sh  get_iptables_info.sh  get_routing_info.yml  get_tsim_facts.yml  ip_json_wrapper.py  process_all_facts.py  process_facts.py
archive/: README_OLD.md
docs/: ERROR_HANDLING_MIGRATION.md  JSON_SUPPORT.md  MOD_WSGI_REFACTORING_PLAN.md  NETNS_WRAPPER_DESIGN.md  NETWORK_SETUP_PERFORMANCE_OPTIMIZATION.md  NETWORK_TOPOLOGY.md  README.md  SSSD_AUTHENTICATION.md  SSSD_IPA_CONFIG.md  TIMING_OPTIMIZATION.md  TSIM_SHELL.md  analysis_modes_comparison.md  generate_diagrams.py  generate_registry_manager_architecture.py  generate_scheduling_flowchart.py  host_creation_improvement_ideas.md  job_scheduling_flowchart  job_scheduling_flowchart.dot  jq_examples.md  ksms_dscp_registry_redesign.md  ksms_tester.md  ksms_wsgi_integration.md  network_reachability_testing_architecture.md  network_status_refactoring_plan.md  network_topology_diagram.py  queue_scheduler_integration_plan.md  race_condition_elimination_plan.md  race_condition_elimination_plan_review.md  registry_manager_architecture.md  registry_manager_architecture_diagram.dot  registry_manager_implementation_spec.md  ssh-restricted-access-research.md  web-interface-updates.md  web_service_administration.md  web_service_implementation_plan.md
scripts/: enhance_ipset_configurations.py  enhance_iptables_logging.py  enhance_iptables_rules.py  enhance_policy_routing.py  fix_shm_permissions.sh  netlog
src/: __init__.py
testing/: NETWORK_TOPOLOGY.md  network_topology_diagram.py  test_config.yaml  test_ip_json_comparison.py  test_mtr_integration.py  test_reverse_path_tracing.py  test_traceroute_simulator.py
tests/: README.md  README_INTEGRATED_TESTS.md  README_NAMESPACE_TESTS.md  inventory.yml  ksms_test_client.py  test_bridge_architecture.py  test_complete_setup_validation.py  test_config.yaml  (+30 more)
(+320 files in other folders)
